# TORC

./: .gitignore  .readthedocs.yaml  PackageNotes.rst  README.rst  TorcSyntaxNotes.rst  make.bat  pyproject.toml  requirements.txt  setup.py
Experiment_Data/Parameter_Setting/: circuitDrawings.py
TORC/: __init__.py
TORC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TORC/source/: Barrier.py  Bridge.py  Channel.py  Circuit.py  Environment.py  GenetetA.py  Genome.py  Inhibitor.py  LocalArea.py  Origin.py  Plasmid.py  Promoter.py  Supercoil.py  SupercoilSensitive.py  TORCError.py  Visible.py  Visualizer.py
TORC/source/Parameterisation/: RandomSearch.py  RandomSearchAnalysis.py  TrainSigmoid.py
TORC/tests/: test_Barrier.py  test_Bridge.py  test_Channel.py  test_Circuit.py  test_Environment.py  test_GenetetA.py  test_Genome.py  test_Inhibitor.py  test_Origin.py  test_Plasmid.py  test_Promoter.py  test_Supercoil.py  test_SupercoilSensitive.py  test_Visible.py  test_Visualizer.py
docs/: index.html
docs/doctrees/: Implementation.doctree  Installation.doctree  Mathmatics.doctree  Replication.doctree  environment.pickle  index.doctree
docs/html/: .buildinfo  Implementation.html  Installation.html  Mathmatics.html  Replication.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/code/: Analysis.html  (+3 more)
sphinx-source/: Implementation.rst  Mathmatics.rst  Replication.rst  conf.py  index.rst
sphinx-source/code/: Circuits.rst  Components.rst  ControlStructures.rst
sphinx-source/replication/: ALife2024.rst
(+30 files in other folders)
