[tool.poetry]
name = "torc"
version = "0.1.0"
description = "Computational simulation for plasmid supercoiling"
authors = ["Penn Faulkner Rainford <penn.rainford@york.ac.uk>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "5.3.0"
numpy = "1.23.4"
matplotlib = "3.6.0"
setuptools = "60.9.3"
webcolors = "1.12"
scipy = "1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
